trying to fix z-index

--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ button {
 #startwin,
 #scorewin {
   position: absolute;
+  z-index: 3;
 }
 .title-bar {
   cursor: move;
@@ -81,23 +82,22 @@ button {
   padding: 0;
   justify-content: space-between;
   align-items: center;
+
+ 
 }
 
 .win-start {
   display: flex;
-  z-index: 100;
   margin-bottom: 55em;
 }
 
 .win-help {
   display: flex;
-  z-index: 5;
   margin-bottom: 25em;
 }
 
 .game-score {
   display: flex;
-  z-index: 5;
   margin-bottom: 25em;
 }
 
@@ -123,7 +123,7 @@ button {
   height: auto;
   width: 100%;
   height: 100%;
-  z-index: 3;
+  z-index: 0;
   animation: floatingpc 5s infinite ease-in-out;
 }
 
